--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.18",
+    "mongoose": "6.12.0",
     "next": "13.4.18",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "^2.2.1"
   }
 }
